# abstract-filepath

./: README.md  TODO.md  abstract-filepath.cabal  cabal.project  hie.yaml  stack.yaml
.github/workflows/: haskell.yml
abstract-filepath/: abstract-filepath.cabal
abstract-filepath-Win32/: CHANGELOG.md  LICENSE  Setup.hs  abstract-filepath-Win32.cabal
abstract-filepath-Win32/System/Win32/: DLL.hsc  DebugApi.hsc  File.hsc  FileMapping.hsc  Info.hsc  Mem.hsc  Path.hsc  Time.hsc  Types.hsc
abstract-filepath-Win32/System/Win32/WindowsString/: DLL.hsc  DebugApi.hsc  File.hsc  FileMapping.hsc  HardLink.hs  Info.hsc  Path.hsc  String.hs  SymbolicLink.hsc  Time.hsc  Types.hsc  Utils.hs
abstract-filepath-Win32/cbits/: HsGDI.c  HsWin32.c  WndProc.c  alphablend.c  diatemp.c  dumpBMP.c  ellipse.c  errors.c
abstract-filepath-Win32/include/: HsGDI.h  HsWin32.h  Win32Aux.h  WndProc.h  alphablend.h  diatemp.h  dumpBMP.h  ellipse.h  errors.h  tlhelp32_compat.h  win32debug.h  windows_cconv.h  winnls_compat.h  winnt_compat.h  winreg_compat.h  winternl_compat.h  winuser_compat.h
abstract-filepath-bytestring/: abstract-filepath-bytestring.cabal
abstract-filepath-bytestring/bench/: Bench.hs
abstract-filepath-bytestring/lib/AFP/Data/ByteString/: Short.hs
abstract-filepath-bytestring/lib/AFP/Data/ByteString/Short/: Internal.hs  Word16.hs
abstract-filepath-bytestring/tests/: Properties.hs
abstract-filepath-bytestring/tests/Properties/ByteString/: Common.hs  Short.hs
abstract-filepath-types/: CHANGELOG.md  LICENSE  abstract-filepath-types.cabal
abstract-filepath-types/lib/AFP/AbstractFilePath/: Types.hs
abstract-filepath-types/lib/AFP/Data/: Word16.hs
abstract-filepath-types/lib/AFP/OsString/: Types.hs
abstract-filepath-types/lib/AFP/OsString/Internal/: Types.hs
abstract-filepath-unix/: .gitignore  CHANGELOG.md  abstract-filepath-unix.cabal  configure
abstract-filepath-unix/include/: HsUnixConfig.h.in
abstract-filepath-unix/lib/System/Posix/Directory/: PosixFilePath.hsc
abstract-filepath-unix/lib/System/Posix/Env/: PosixString.hsc
abstract-filepath-unix/lib/System/Posix/Files/: Common.hsc  PosixString.hsc
abstract-filepath-unix/lib/System/Posix/IO/: Common.hsc  PosixString.hsc
abstract-filepath-unix/lib/System/Posix/PosixFilePath/: FilePath.hsc
abstract-filepath-unix/lib/System/Posix/Process/: Internals.hs  PosixString.hsc
abstract-filepath-unix/lib/System/Posix/Temp/: PosixString.hsc
abstract-filepath-word16/: CHANGELOG.md  abstract-filepath-word16.cabal
abstract-filepath-word16/lib/AFP/Data/: Word16.hs
abstract-filepath/bench/Short/: BenchAll.hs  BenchIndices.hs
abstract-filepath/bench/Short/Word16/: BenchAll.hs  BenchIndices.hs
abstract-filepath/lib/AFP/: AbstractFilePath.hs  AbstractFilePath.hs-boot  OsString.hs
abstract-filepath/lib/AFP/AbstractFilePath/: Common.hs  Internal.hs  Posix.hs  Windows.hs
abstract-filepath/lib/AFP/AbstractFilePath/Internal/: Common.hs  Posix.hs  Windows.hs
abstract-filepath/lib/AFP/Data/ByteString/: Short.hs
abstract-filepath/lib/AFP/Data/ByteString/Short/: Decode.hs  Internal.hs  Word16.hs
abstract-filepath/lib/AFP/OsString/: Common.hs  Internal.hs  Internal.hs-boot  Posix.hs  Windows.hs
abstract-filepath/test/: AbstractFilePathSpec.hs  Arbitrary.hs  Doctests.hs
bench/: Bench.hs
bench/Short/: BenchAll.hs  BenchIndices.hs
bench/Short/Word16/: BenchAll.hs  BenchIndices.hs
lib/: AbstractFilePath.hs  OsString.hs
lib/AFP/: AbstractFilePath.hs  AbstractFilePath.hs-boot  OsString.hs
lib/AFP/AbstractFilePath/: Common.hs  Internal.hs  Internal.hs-boot  Posix.hs  Windows.hs  foo.patch
lib/AFP/AbstractFilePath/Internal/: Common.hs  Posix.hs  Types.hs  Windows.hs
lib/AFP/Data/: Word16.hs
lib/AFP/Data/ByteString/: Short.hs
lib/AFP/Data/ByteString/Short/: Decode.hs  Encode.hs  Internal.hs  Word16.hs
lib/AFP/OsString/: Common.hs  Internal.hs  Windows.hs
lib/AFP/OsString/Internal/: Types.hs  Types.hs-boot
lib/AbstractFilePath/: Internal.hs  Posix.hs  ShortByteString.hs  Windows.hs  Word16.hs
lib/AbstractFilePath/Internal/: Common.hs  Decode.hs  Encode.hs  Posix.hs  ShortByteString.hs  Types.hs  Types.hs-boot
lib/AbstractFilePath/ShortByteString/: Word16.hs
lib/Data/: Word16.hs
lib/Data/ByteString/: Short.hs
lib/Data/ByteString/Short/: Decode.hs  Encode.hs  Internal.hs  Word16.hs
lib/OsString/: Internal.hs  Internal.hs-boot
lib/OsString/Internal/: Types.hs  Types.hs-boot
test/: AbstractFilePathSpec.hs  Arbitrary.hs  Doctests.hs
