cabal-version:      3.0
name:               abstract-filepath
version:            0.1.0.0
synopsis:           Abstract cross-platform FilePath
description:
  This is a user-space implementation of the Abstract FilePath Proposal (AFPP) authored by Herbert Valerio Riedel, Neil Mitchell & Michael Snoyman.

homepage:

-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Julian Ospald
maintainer:         hasufell@posteo.de

-- copyright:
category:           System
extra-doc-files:    CHANGELOG.md
extra-source-files: lib/AbstractFilePath/Internal/Common.hs

library
  exposed-modules:
    AbstractFilePath
    AbstractFilePath.Internal
    AbstractFilePath.Internal.Posix
    AbstractFilePath.Internal.Types
    AbstractFilePath.Internal.Windows
    AbstractFilePath.Posix
    AbstractFilePath.Windows
    Data.ByteString.Short
    Data.ByteString.Short.Decode
    Data.ByteString.Short.Encode
    Data.ByteString.Short.Internal
    Data.ByteString.Short.Word16
    Data.Word16
    OsString
    OsString.Internal
    OsString.Internal.Types

  -- other-extensions:
  build-depends:
    , base              >=4.10    && <5
    , bytestring        ^>=0.10
    , exceptions        ^>=0.10
    , template-haskell  >=2.16    && <2.20
    , text              ^>=1.2.4.1
    , word8             ^>=0.1

  hs-source-dirs:   lib
  default-language: Haskell2010

test-suite abstract-filepath-test
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Test.hs
  other-modules:
    AbstractFilePathSpec
    Arbitrary

  build-depends:
    , abstract-filepath
    , base               >=4.10 && <5
    , checkers
    , hspec
    , hspec-checkers
    , QuickCheck

  build-tool-depends: hspec-discover:hspec-discover -any
