cabal-version:      3.0
name:               abstract-filepath
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
maintainer:         hasufell@posteo.de
author:             Julian Ospald
synopsis:           Abstract cross-platform FilePath
description:
  This is a user-space implementation of the Abstract FilePath Proposal (AFPP) authored by Herbert Valerio Riedel, Neil Mitchell & Michael Snoyman.

category:           System
extra-source-files: lib/AbstractFilePath/Internal/Common.hs
extra-doc-files:    CHANGELOG.md

library
  exposed-modules:
    AbstractFilePath
    AbstractFilePath.Internal
    AbstractFilePath.Internal.Posix
    AbstractFilePath.Internal.Types
    AbstractFilePath.Internal.Windows
    AbstractFilePath.Posix
    AbstractFilePath.Windows
    Data.ByteString.Short
    Data.ByteString.Short.Decode
    Data.ByteString.Short.Encode
    Data.ByteString.Short.Internal
    Data.ByteString.Short.Word16
    Data.Word16
    OsString
    OsString.Internal
    OsString.Internal.Types

  hs-source-dirs:   lib
  default-language: Haskell2010
  build-depends:
    , base              >=4.10    && <5
    , bytestring        ^>=0.10
    , exceptions        ^>=0.10
    , template-haskell  >=2.16    && <2.20
    , text              ^>=1.2.4.1
    , word8             ^>=0.1

test-suite abstract-filepath-test
  type:               exitcode-stdio-1.0
  main-is:            Test.hs
  build-tool-depends: hspec-discover:hspec-discover -any
  hs-source-dirs:     test
  other-modules:
    AbstractFilePathSpec
    Arbitrary

  default-language:   Haskell2010
  build-depends:
    , abstract-filepath
    , base               >=4.10    && <5
    , checkers           ^>=0.5.6
    , hspec              ^>=2.8.2
    , hspec-checkers     ^>=0.1.0.2
    , QuickCheck         ^>=2.14.2
