cabal-version:      3.0
name:               abstract-filepath
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
maintainer:         hasufell@posteo.de
author:             Julian Ospald
synopsis:           Abstract cross-platform FilePath
description:
  This is a user-space implementation of the Abstract FilePath Proposal (AFPP) authored by Herbert Valerio Riedel, Neil Mitchell & Michael Snoyman.

category:           System
extra-source-files: lib/AFP/AbstractFilePath/Internal/Common.hs
                    lib/AFP/AbstractFilePath/Common.hs
extra-doc-files:    CHANGELOG.md

library
  exposed-modules:
    AFP.AbstractFilePath
    AFP.AbstractFilePath.Internal
    AFP.AbstractFilePath.Internal.Posix
    AFP.AbstractFilePath.Internal.Types
    AFP.AbstractFilePath.Internal.Windows
    AFP.AbstractFilePath.Posix
    AFP.AbstractFilePath.Windows
    AFP.Data.ByteString.Short
    AFP.Data.ByteString.Short.Decode
    AFP.Data.ByteString.Short.Encode
    AFP.Data.ByteString.Short.Internal
    AFP.Data.ByteString.Short.Word16
    AFP.Data.Word16
    AFP.OsString
    AFP.OsString.Internal
    AFP.OsString.Internal.Types

  hs-source-dirs:   lib
  default-language: Haskell2010
  build-depends:
    , base              >=4.10    && <5
    , bytestring        ^>=0.10
    , exceptions        ^>=0.10
    , template-haskell  >=2.16    && <2.20
    , text              ^>=1.2.4.1
    , word8             ^>=0.1

test-suite abstract-filepath-test
  type:               exitcode-stdio-1.0
  main-is:            Test.hs
  build-tool-depends: hspec-discover:hspec-discover -any
  hs-source-dirs:     test
  other-modules:
    AbstractFilePathSpec
    Arbitrary

  default-language:   Haskell2010
  build-depends:
    , abstract-filepath
    , base               >=4.10    && <5
    , checkers           ^>=0.5.6
    , hspec              ^>=2.8.2
    , hspec-checkers     ^>=0.1.0.2
    , QuickCheck         ^>=2.14.2

test-suite doctest
  type:               exitcode-stdio-1.0
  main-is:            Doctests.hs
  hs-source-dirs:     test
  default-language:   Haskell2010
  build-depends:
      base               >=4.10    && <5
    , abstract-filepath
    , doctest

