name:               abstract-filepath-Win32
version:            2.12.0.1
license:            BSD3
license-file:       LICENSE
author:             Alastair Reid, shelarcy, Tamar Christina
copyright:
  Alastair Reid, 1999-2003; shelarcy, 2012-2013; Tamar Christina, 2016-2020

maintainer:         Haskell Libraries <libraries@haskell.org>
bug-reports:        https://github.com/haskell/win32/issues
homepage:           https://github.com/haskell/win32
category:           System, Graphics
synopsis:
  A binding to Windows Win32 API utilizing abstract filepaths.

description:
  This library contains direct bindings to the Windows Win32 APIs for Haskell.

build-type:         Simple
cabal-version:      >=2.0
extra-source-files:
  CHANGELOG.md
  include/alignment.h
  include/diatemp.h
  include/dumpBMP.h
  include/ellipse.h
  include/errors.h
  include/Win32Aux.h
  include/win32debug.h

library
  default-language:   Haskell2010
  default-extensions:
    CPP
    ForeignFunctionInterface

  if impl(ghc >=7.1)
    default-extensions: NondecreasingIndentation

  if !os(windows)
    -- This package requires Windows to build
    build-depends: unbuildable <0
    buildable:     False

  build-depends:
      abstract-filepath
    , abstract-filepath-bytestring
    , abstract-filepath-types
    , base                          >=4.5 && <5
    , filepath

  -- Black list hsc2hs 0.68.6 which is horribly broken.
  build-tool-depends: hsc2hs:hsc2hs >0 && <0.68.6 || >0.68.6
  ghc-options:        -Wall -fno-warn-name-shadowing
  cc-options:         -fno-strict-aliasing
  exposed-modules:
    System.Win32.DebugApi
    System.Win32.DLL
    System.Win32.File
    System.Win32.FileMapping
    System.Win32.HardLink
    System.Win32.Info
    System.Win32.Mem
    System.Win32.Path
    System.Win32.String
    System.Win32.SymbolicLink
    System.Win32.Time
    System.Win32.Types
    System.Win32.Utils
    System.Win32.WindowsString.Types
    System.Win32.Word

  extra-libraries:
    user32
    gdi32
    winmm
    advapi32
    shell32
    shfolder
    shlwapi
    msimg32
    imm32

  ghc-options:        -Wall
  include-dirs:       include
  includes:
    alignment.h
    alphablend.h
    diatemp.h
    dumpBMP.h
    ellipse.h
    errors.h
    HsGDI.h
    HsWin32.h
    Win32Aux.h
    win32debug.h
    windows_cconv.h
    WndProc.h

  install-includes:
    alphablend.h
    HsGDI.h
    HsWin32.h
    tlhelp32_compat.h
    windows_cconv.h
    winnls_compat.h
    winnt_compat.h
    winreg_compat.h
    winternl_compat.h
    winuser_compat.h
    WndProc.h

  c-sources:
    cbits/alphablend.c
    cbits/diatemp.c
    cbits/dumpBMP.c
    cbits/ellipse.c
    cbits/errors.c
    cbits/HsGDI.c
    cbits/HsWin32.c
    cbits/WndProc.c

  cc-options:         -Wall
