cabal-version:   3.0
name:            abstract-filepath-bytestring
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
maintainer:      hasufell@posteo.de
author:          Julian Ospald
bug-reports:     https://github.com/hasufell/abstract-filepath/issues
synopsis:        Additional ShortByteString API for abstract filepaths
tested-with:
  GHC ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.6
   || ==9.0.1

category:        System
extra-doc-files: CHANGELOG.md

library
  exposed-modules:
    AFP.Data.ByteString.Short
    AFP.Data.ByteString.Short.Decode
    AFP.Data.ByteString.Short.Encode
    AFP.Data.ByteString.Short.Internal
    AFP.Data.ByteString.Short.Word16

  hs-source-dirs:           lib
  default-language:         Haskell2010
  build-depends:
    , abstract-filepath-word16
    , base                      >=4.9.1.0  && <5
    , bytestring                ^>=0.10.8.1
    , exceptions                ^>=0.10
    , primitive                 ^>=0.7
    , template-haskell          >=2.10     && <2.20
    , text                      >=1.2.3.0  && <1.2.6
    , word8                     ^>=0.1

  x-docspec-extra-packages: QuickCheck

benchmark bench
  main-is:          Bench.hs
  other-modules:
    Short.BenchAll
    Short.BenchIndices
    Short.Word16.BenchAll
    Short.Word16.BenchIndices

  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  default-language: Haskell2010
  ghc-options:      -O2 -with-rtsopts=-A32m
  build-depends:
    , abstract-filepath-bytestring
    , base                          >=4.9.1.0  && <5
    , bytestring                    ^>=0.10.8.1
    , deepseq                       ^>=1.4
    , random                        ^>=1.1
    , tasty-bench                   ^>=0.3
