cabal-version:      2.4
name:               abstract-filepath-unix
version:            2.7.2.2
synopsis:           POSIX functionality based on abstract filepaths

-- description:
bug-reports:        https://github.com/hasufell/abstract-filepath/issues
license:            BSD-3-Clause
license-file:       LICENSE
maintainer:         hasufell@posteo.de
author:             Julian Ospald
build-type:         Configure
tested-with:
  GHC ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.6
   || ==9.0.1

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md
  config.guess
  config.sub
  configure
  configure.ac
  include/HsUnix.h
  include/HsUnixConfig.h.in
  install-sh
  unix.buildinfo.in

extra-tmp-files:
  autom4te.cache
  config.log
  config.status
  include/HsUnixConfig.h
  unix.buildinfo

library
  exposed-modules:
    System.Posix.Directory.PosixFilePath
    System.Posix.Env.PosixString
    System.Posix.Files.PosixString
    System.Posix.IO.PosixString
    System.Posix.PosixFilePath.FilePath
    System.Posix.Process.PosixString
    System.Posix.Temp.PosixString

  other-modules:
    System.Posix.Directory.Common
    System.Posix.Files.Common
    System.Posix.IO.Common
    System.Posix.Process.Common
    System.Posix.Process.Internals

  build-depends:
    , abstract-filepath
    , abstract-filepath-types
    , abstract-filepath-bytestring
    , base                     >=4.9.1.0 && <5
    , bytestring               >=0.9.2   && <0.12
    , time                     >=1.2     && <1.13
    , word8                    ^>=0.1

  if os(windows)
    -- This package currently supports neither Cygwin nor MinGW,
    -- therefore os(windows) is effectively not supported.
    build-depends: unbuildable <0
    buildable:     False

  hs-source-dirs:   lib
  default-language: Haskell2010
  include-dirs:     include
  includes:
    execvpe.h
    HsUnix.h

  install-includes:
    execvpe.h
    HsUnix.h

  c-sources:
    cbits/execvpe.c
    cbits/HsUnix.c
