cabal-version:   3.0
name:            abstract-filepath-word16
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
maintainer:      hasufell@posteo.de
author:          Julian Ospald
synopsis:        Word16 API for abstract filepath
tested-with:
  GHC ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.4
   || ==8.10.6
   || ==9.0.1

category:        System
extra-doc-files: CHANGELOG.md

library
  exposed-modules:  AFP.Data.Word16
  hs-source-dirs:   lib
  default-language: Haskell2010
  build-depends:
    , base              >=4.9.1.0 && <5
    , bytestring        ^>=0.10
    , template-haskell  >=2.10    && <2.20
    , text              >=1.2.3.0 && <1.2.6
